--- a/RegistrationViewControlier/Base.lproj/Main.storyboard
+++ b/RegistrationViewControlier/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7HW-wV-ht9">
                                         <rect key="frame" x="0.0" y="60" width="374" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                     </textField>
                                 </subviews>
                             </stackView>
@@ -54,11 +54,17 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="133" height="30"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                 <state key="normal" title="Forgot User Name?"/>
+                                                <connections>
+                                                    <action selector="forgotNamePressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="nMr-En-nLm"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bDf-e6-zcS">
                                                 <rect key="frame" x="211" y="0.0" width="115" height="30"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                 <state key="normal" title="Forgot Pssword?"/>
+                                                <connections>
+                                                    <action selector="forgotPasswordPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="0x5-DD-85X"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
@@ -81,26 +87,75 @@
                             <constraint firstItem="tbN-xQ-Jc9" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="300" id="mdU-H0-ikW"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="textName" destination="VvT-og-nhV" id="jNa-XN-7xy"/>
+                        <outlet property="textPassword" destination="7HW-wV-ht9" id="dNx-pc-ehj"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="34.782608695652179" y="83.705357142857139"/>
         </scene>
-        <!--View Controller-->
+        <!--Welcom View Controller-->
         <scene sceneID="ov5-Em-yW8">
             <objects>
-                <viewController id="GwL-yE-yUG" sceneMemberID="viewController">
+                <viewController id="GwL-yE-yUG" customClass="WelcomViewController" customModule="RegistrationViewControlier" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="X7t-Ug-F75">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="22" translatesAutoresizingMaskIntoConstraints="NO" id="zW1-IQ-aGt">
+                                <rect key="frame" x="123" y="175" width="169" height="95"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome, User!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mIS-1L-wqW">
+                                        <rect key="frame" x="0.0" y="0.0" width="169" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="169" id="YlP-V7-OL2"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="👋" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E2F-lq-LCh">
+                                        <rect key="frame" x="32.5" y="52" width="104" height="43"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="104" id="qVY-MP-P6R"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="36"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="169" id="8l5-yA-oEK"/>
+                                </constraints>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IJl-gI-kBd">
+                                <rect key="frame" x="158" y="692" width="98" height="48"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Log out"/>
+                                <connections>
+                                    <segue destination="te6-Ng-1DI" kind="unwind" unwindAction="unwindSegueWith_segue:" id="l5X-X9-fVW"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="KI5-8o-gZL"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="IJl-gI-kBd" firstAttribute="centerX" secondItem="X7t-Ug-F75" secondAttribute="centerX" id="7ox-NG-bKm"/>
+                            <constraint firstItem="KI5-8o-gZL" firstAttribute="bottom" secondItem="IJl-gI-kBd" secondAttribute="bottom" constant="122" id="8ar-Ka-TDB"/>
+                            <constraint firstItem="KI5-8o-gZL" firstAttribute="trailing" secondItem="zW1-IQ-aGt" secondAttribute="trailing" constant="122" id="MWa-YU-Tra"/>
+                            <constraint firstItem="zW1-IQ-aGt" firstAttribute="leading" secondItem="KI5-8o-gZL" secondAttribute="leading" constant="123" id="ZMa-wb-z8l"/>
+                            <constraint firstItem="zW1-IQ-aGt" firstAttribute="top" secondItem="KI5-8o-gZL" secondAttribute="top" constant="131" id="y5P-bu-rG7"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Z5P-5O-Mc9"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fzv-26-AGy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="te6-Ng-1DI" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="743" y="84"/>
+            <point key="canvasLocation" x="742.02898550724649" y="83.705357142857139"/>
         </scene>
     </scenes>
     <resources>
